# pyplexityai

./: .bumpversion.cfg  .gitignore  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  async_client.py  client.py  client_types.py  errors.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  version.yml
docs/: style_guide.md
examples/: async_usage.py  basic_sync.py  batch_processing.py  error_handling.py  openai_compatible.py  streaming.py
pyplexityai/: __init__.py  openai.py
tests/: test.py
